legends fix: character select background position and overflow

--- a/src/legends/modules/character/screens/CharacterSelect/CharacterSelect.module.scss
+++ b/src/legends/modules/character/screens/CharacterSelect/CharacterSelect.module.scss
@@ -1,7 +1,6 @@
 @import '@legends/styles/base.scss';
 
 .wrapper {
-  position: relative;
   text-align: center;
   max-width: 82rem;
   margin: 0 auto;
@@ -10,12 +9,13 @@
 
   .backgroundEffect {
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+
     z-index: -1;
-    opacity: 0.7;
+    opacity: 0.9;
     background-size: cover;
     background-repeat: no-repeat;
   }
